--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -3,6 +3,6 @@
 </a>
 <ul class="dropdown-menu">
   <li>
-  <a href="#" data-ng-click="setCurrency('RDD')" data-ng-class="{active: currency.symbol == 'RDD'}">RDD</a>
+  <a href="#" data-ng-click="setCurrency(CLICK')" data-ng-class="{active: currency.symbol == 'CLICK'}">CLICK</a>
   </li>
 </ul>
