--- a/public/views/block.html
+++ b/public/views/block.html
@@ -59,11 +59,11 @@
           </tr> 
           <tr>
             <td><strong>Block Type</strong></td>
-            <td class="text-right text-muted">{{block.nonce > 0 && 'PoW' || 'PoSV'}}</td>
+            <td class="text-right text-muted">{{block.nonce > 0 && 'PoW' || 'PoS'}}</td>
           </tr>
           <tr>
             <td><strong>Block Reward</strong></td>
-            <td class="text-right text-muted">{{$root.currency.getConvertion(block.reward) || block.reward + ' RDD'}}</td>
+            <td class="text-right text-muted">{{$root.currency.getConvertion(block.reward) || block.reward + ' CLICK'}}</td>
           </tr> 
           <tr>
             <td><strong>Timestamp</strong></td>
