--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="insight navbar-brand" href="https://www.reddcoin.com"><img src="/img/reddcoin_header_logo.png" align="top"></a>
+      <a class="insight navbar-brand" href="https://www.clickcoin.click"><img src="/img/clickcoin_header_logo.png" align="top"></a>
     </div>
     <div class="navbar-collapse collapse" collapse="$root.isCollapsed">
       <ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
         &nbsp; &middot;
         <strong>Last Block</strong> {{totalBlocks || info.blocks}} &middot;
         <span data-ng-init="getStatus('Info')">
-          <strong>Supply</strong> {{info.moneysupply}} RDD
+          <strong>Supply</strong> {{info.moneysupply}} CLICK
         </span>
       </div>
       </li>
