--- a/public/views/index.html
+++ b/public/views/index.html
@@ -52,7 +52,7 @@
             <td>
               <a class="ellipsis" href="/tx/{{tx.txid}}">{{tx.txid}}</a>
             </td>
-            <td class="text-right"><span class="ellipsis">{{tx.valueOut}} RDD</span></td>
+            <td class="text-right"><span class="ellipsis">{{tx.valueOut}} CLICK</span></td>
           </tr>
           </tbody>
         </table>
@@ -61,8 +61,8 @@
 
       <div class="col-xs-12 col-md-4 col-gray">
         <h2> About </h2>
-        <p><strong>Reddsight</strong>  is an <a href="http://live.reddcoin.com/" target="_blank">open-source Reddcoin blockchain explorer</a> with complete <a href="https://github.com/reddcoin-project/reddsight-api/" target="_blank">REST and websocket APIs</a> that can be used for writing web wallets and other apps that need more advanced blockchain queries than provided by reddcoind RPC. Check out the <a href="https://github.com/reddcoin-project/reddsight" target="_blank">source code</a>.</p>
-        <p><strong>Reddsight</strong> is still in development, so be sure to report any bugs and provide feedback for improvement at our <a href="https://github.com/reddcoin-project/reddsight/issues" target="_blank">github issue tracker</a>.</p>
+        <p><strong>Reddsight</strong>  is an <a href="http://click.blockchain.lt/" target="_blank">open-source ClickCoin blockchain explorer</a> with complete <a href="https://github.com/noise23/reddsight-api/" target="_blank">REST and websocket APIs</a> that can be used for writing web wallets and other apps that need more advanced blockchain queries than provided by ClickCoind RPC. Check out the <a href="https://github.com/noise23/reddsight" target="_blank">source code</a>.</p>
+        <p><strong>Reddsight</strong> is still in development, so be sure to report any bugs and provide feedback for improvement at our <a href="https://github.com/noise23/reddsight/issues" target="_blank">github issue tracker</a>.</p>
         <div id="powered" class="row">
           <div class="powered-text">
             <small class="text-muted">Powered by</small>
