--- a/public/views/status.html
+++ b/public/views/status.html
@@ -47,7 +47,7 @@
         <thead data-ng-include src="'/views/includes/infoStatus.html'"></thead>
         <tbody>
           <tr>
-            <td>Last Block Hash (Reddcoind)</td>
+            <td>Last Block Hash (ClickCoind)</td>
             <td class="text-right ellipsis"><a href="/block/{{lastblockhash}}">{{lastblockhash}}</a></td>
           </tr>
           <tr>
@@ -101,7 +101,7 @@
     </div> <!-- END OF COL-8 -->
 
     <div class="col-xs-12 col-md-4 col-gray">
-      <h2>Reddcoin node information</h2>
+      <h2>ClickCoin node information</h2>
       <table class="table" data-ng-controller="StatusController" data-ng-init="getStatus('Info')">
         <thead  data-ng-include src="'/views/includes/infoStatus.html'"></thead>
         <tbody>
