--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -381,6 +381,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #333;
 }
 
+.txvalues-stake {
+    background-color: #51A428;
+}
+
 .txvalues-success {
     background-color: #2FA4D7;
 }
